# 7-practica-cohort2-maria

./: ClasesPrincipales_MetodosyAtributos.MD  main.cpp
7-practica-cohort2-maria/: CMakeLists.txt  ClasesPrincipales_MetodosyAtributos.MD  README.md
7-practica-cohort2-maria/TiendaEcologica/: CMakeLists.txt
7-practica-cohort2-maria/TiendaEcologica/src/: Cliente.cpp  Cliente.h  Main.cpp  Producto.cpp  Producto.h  Tienda.cpp  Tienda.h  Venta.cpp  Venta.h
TiendaEcologica/: CMakeLists.txt  main.cpp
TiendaEcologica/src/: Cliente.cpp  Cliente.h  Main.cpp  Producto.cpp  Producto.h  Tienda.cpp  Tienda.h  Venta.cpp  Venta.h
src/: Cliente.cpp  Cliente.h  Tienda.cpp  Tienda.h  Venta.cpp  Venta.h
